minikube/03_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment

spec:
  replicas: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - image: nginx:1.13
          name: nginx
          ports:
            - containerPort: 80
