minikube/05_service_node_port.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service-node-port

spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30000
  selector:
    app: my-app
